@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-08T16:22:03Z",
-  "count_outdated" : 438,
-  "uniques_outdated" : 253,
-  "count" : 474,
-  "uniques" : 271,
+  "timestamp" : "2022-08-09T01:41:11Z",
+  "count_outdated" : 441,
+  "uniques_outdated" : 254,
+  "count" : 477,
+  "uniques" : 272,
   "clones" : [
-    {
-      "timestamp": "2022-07-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-26T00:00:00Z",
       "count": 2,
@@ -100,6 +93,13 @@
       "timestamp": "2022-08-07T00:00:00Z",
       "count": 2,
       "count_minmax": [ 2, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-08-08T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
