@@ -3,11 +3,6 @@
   "uniques": 5,
   "clones": [
     {
-      "timestamp": "2022-07-25T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-07-26T00:00:00Z",
       "count": 2,
       "uniques": 1
@@ -70,6 +65,11 @@
     {
       "timestamp": "2022-08-07T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-08-08T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
